2012-01-08  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.in: Bumped version to 2.4.31

	* build/vs2008/gmime.vcproj: Bumped version.

2012-01-08  Jeffrey Stedfast  <fejj@gnome.org>

	Fix for bug #667070

	* configure.in: Fixed Docbook checks for the html and pdf converters.

	* docs/tutorial/Makefile.am: Use the DB2HTML and DB2PDF variables.

2012-01-05  Jeffrey Stedfast  <jeff@xamarin.com>

	Fixes for bug #667137.

	* tests/Makefile.am: If any tests fail, exit with an error to
	abort make.

	* tests/testsuite.c (testsuite_exit): Simply return
	total_errors.

2012-01-05  Jeffrey Stedfast  <fejj@gnome.org>

	Fixes for bug #667072.

	* mono/Makefile.am: Install to $(libdir) instead of $(prefix)/libdir.

	* mono/gmime-sharp.pc.in: Set libdir to @libdir@

2012-01-05  Jeffrey Stedfast  <fejj@gnome.org>

	* src/Makefile.am: Rename uuencode/uudecode to
	gmime-uuencode/decode to prevent naming collisions with the GNU
	Sharutils tools. Fixes bug #667073.

2012-01-05  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c (rfc2047_decode_tokens): Fixed a memory leak.

2011-12-23  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.in: Bumped version to 2.4.30

	* build/vs2008/gmime.vcproj: Bumped version.

2011-12-23  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c (quoted_decode): Made more robust and also
	modified to keep state (e.g. for use when triplets span across
	multiple encoded-word tokens).
	(tokenize_rfc2047_phrase): Tokenizes a rfc822 phrase header for
	later processing.
	(tokenize_rfc2047_text): Tokenizes a rfc822 unstructured text
	header for later processing.
	(rfc2047_decode_tokens): Merge and decode rfc2047 tokens,
	converting the decoded text into UTF-8.
	(g_mime_utils_header_decode_phrase): Rewritten to use the above
	functions.
	(g_mime_utils_header_decode_text): Same.

2011-12-23  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c (charset_convert): Don't count the